<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:layout_gravity="center"
    android:orientation="horizontal"
    android:background="@drawable/back2">


    <ImageView
        android:id="@+id/imageView_logo_spn_id"
        android:layout_width="58dp"
        android:layout_height="50dp"

        android:paddingTop="9dp"
        app:srcCompat="@mipmap/shidologo"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/MyACcount_textView_spn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="9dp"
        android:text="@string/spn__my_account"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintTop_toBottomOf="@+id/imageView_logo_spn_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/SUBSCRIPTION_textView_spn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spn_SUBSCRIPTION"
        android:gravity="center"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:layout_marginTop="15dp"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/MyACcount_textView_spn_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/Notification_textView_spn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spn_header_notification"
        android:gravity="center"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/SUBSCRIPTION_textView_spn_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
      />


    <TextView
        android:id="@+id/settings_textView_spn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:text="@string/spn_settings"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Notification_textView_spn_id"  />


    <TextView
        android:id="@+id/share_app_textView_spn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:textColor="#000000"
        android:textSize="20sp"
        android:text="@string/spn_share_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_textView_spn_id"/>


    <TextView
        android:id="@+id/PEIVACYTERMS_textView_spn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="320dp"
        android:paddingTop="9dp"
        android:text="@string/spn_PEIVACYTERMS"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/share_app_textView_spn_id" />

    <TextView
        android:id="@+id/TERMSANDCOMDITIONS_textView_spn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:textColor="#000000"
        android:textSize="20sp"
        android:text="@string/spn_TERMSANDCOMDITIONS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PEIVACYTERMS_textView_spn_id" />



    <TextView
        android:id="@+id/SIGNOUT_textView_spn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:gravity="center"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:textColor="#000000"
        android:textSize="20sp"
        android:text="@string/spn_sign_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TERMSANDCOMDITIONS_textView_spn_id"
      />
</androidx.constraintlayout.widget.ConstraintLayout>